--- a/team.html
+++ b/team.html
@@ -124,7 +124,8 @@
         <div class="e-team-member" v-for="teammember in teamData" :id="teammember.slug">
             <div class="e-wrap">
                 
-                <div v-if="teammember._embedded['wp:featuredmedia']!=undefined" class="e-team-picture" :style="{ backgroundImage: 'url(' + teammember._embedded['wp:featuredmedia'].media_details.sizes.medium.source_url + ')' }">{{teammember._embedded}}</div>
+              <div v-if="teammember.acf.picture" class="e-team-picture" :style="{ backgroundImage: 'url(' + teammember._embedded['wp:featuredmedia'].media_details.sizes.medium.source_url + ')' }"></div>
+
 
                 <div class="e-info">
 
