--- a/team.html
+++ b/team.html
@@ -184,7 +184,7 @@
     </div>
     <div id="overlay"></div>
     <script src='https://unpkg.com/vue@2.0.3/dist/vue.js'></script>
-    <script src="js/team_directus.js"></script>
+    <script src="js/team.js"></script>
     <div id="lighthouse"><iframe id="Launcher" title="Lighthouse Help Widget Launcher Button" style="border-style: none; position: fixed; right: 20px; bottom: 20px; height: 70px; width: 70px; overflow: hidden; z-index: 2147483647;"></iframe></div>
     <script src="https://cdn.helpdocs.io/apps/lighthouse/static/js/main.039c92b6.js"></script>
     <div id="feedly-mini" title="feedly Mini tookit"></div>
