--- a/beth-simone-noveck.html
+++ b/beth-simone-noveck.html
@@ -180,7 +180,7 @@
                     <ul v-for= "(video, index) in memberData.videos[0]">
                           <li v-html='video.data.embed.html'></li>
                     </ul>
-                    <iframe src="https://www.youtube.com/watch?v=SfGjm2lHqpQ" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
+                    <iframe src="https://player.vimeo.com/video/394225913" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe>
                 </section>
                 <section class="e-section">
                     <h3>Books by Beth Simone Noveck</h3>
