--- a/stefaan-verhulst.html
+++ b/stefaan-verhulst.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>The GovLab | Beth Simone Noveck</title>
-<meta content="The GovLab | Beth Simone Noveck" property="og:title" />
+<title>The GovLab | Stefaan Verhulst</title>
+<meta content="The GovLab | Stefaan Verhulst" property="og:title" />
 <meta
-    content="Beth Simone Noveck is Co-Founder and Director of The GovLab and its MacArthur Research Network on Opening Governance."
+    content="Stefaan G. Verhulst is Co-Founder and Chief Research and Development Officer of the Governance Laboratory @NYU (GovLab) where he is responsible for building a research foundation on how to transform governance using advances in science and technology."
     property="og:description">
 
     <meta property="og:type" content="website" />
@@ -151,21 +151,6 @@
         </div>
     </div>
 
-    <!-- <div class="b-top-section">
-        <div class="e-wrap">
-            <div class="e-info">
-                <div class="e-names">
-                    <h1>Beth Simone Noveck</h1>
-                    <h2>Co-founder and Director</h2>
-                </div>
-
-                <div class="e-links">
-                    <a href="https://twitter.com/bethnoveck" target="_blank" class="b-social-media"><i class="fa fa-twitter"></i></a>
-                    <a href="https://medium.com/@bethnoveck" target="_blank" class="b-social-media"><i class="fa fa-medium"></i></a>
-                </div>
-            </div>
-        </div>
-    </div> -->
 
     <div class="e-bio-section">
         <div class="e-wrap">
@@ -186,7 +171,9 @@
                 </section>
                 <section class="e-section">
                     <h3>Books by {{memberData.name}}</h3>
+
                     <ul class="e-books"  v-for= "(book, index) in memberData.books">
+
                         <li>
                             <figure>
                                 <div class="e-image"
