--- a/team.html
+++ b/team.html
@@ -134,12 +134,13 @@
                 <div class="e-bio">
                     <h3>{{teammember.name}}</h3>
                     <h4>{{teammember.title}}</h4>
-                    <p v-if="teammember.extended == false" v-html="teammember.bio_short"></p>
-                    <p v-if="teammember.extended == true" v-html="teammember.bio"></p>
+                    
+                    <p v-if="!teammember.extended" v-html="teammember.bio_short"></p>
+                    <p v-else v-html="teammember.bio"></p>
 
-                    <a v-if="teammember.extended == false && teammember.more_infos==false" @click="teammember.extended ? showExc(teammember) : showDesc(teammember)" class="b-button m-naked" target="_blank">More <i class="material-icons">keyboard_arrow_down</i></a>
-                    <a v-if="teammember.extended == true && teammember.more_infos==false" @click="teammember.extended ? showExc(teammember) : showDesc(teammember)" class="b-button m-naked" target="_blank">Less<i class="material-icons">keyboard_arrow_down</i></a>
-                    <a v-if="teammember.extended == true && teammember.more_infos==true" @click="teamMore(teammember.slug)" class="b-button m-naked" target="_blank">More<i class="material-icons">keyboard_arrow_down</i></a>
+                    <a v-if="teammember.more_infos==false && !teammember.extended" @click="showDesc(teammember)" class="b-button m-naked" target="_blank">More <i class="material-icons">keyboard_arrow_down</i></a>
+                    <a v-if="teammember.more_infos==false && teammember.extended" @click="showExc(teammember)" class="b-button m-naked" target="_blank">Less<i class="material-icons">keyboard_arrow_up</i></a>
+                    <a v-if="teammember.more_infos==true" @click="teamMore(teammember.slug)" class="b-button m-naked" target="_blank">More<i class="material-icons">keyboard_arrow_down</i></a>
 
                 </div>
             </div>
