--- a/team.html
+++ b/team.html
@@ -125,7 +125,7 @@
         <h1>Team</h1>
         <div class="e-team-member" v-for="teammember in teamData" :id="teammember.slug">
             <div class="e-wrap">
-                              <!-- <div v-if="teammember.picture != null " class="e-team-picture" :style="{ backgroundImage: 'url('+teammember.picture.data.full_url+')' }">{{teammember.picture.}}</div> -->
+
                               <div v-if="teammember.picture != null" class="e-team-picture" :style="{ backgroundImage: 'url(' + teammember.picture.data.thumbnails[3].url+ ')' }"></div>
 
                 <div class="e-info">
@@ -134,13 +134,22 @@
                 <div class="e-bio">
                     <h3>{{teammember.name}}</h3>
                     <h4>{{teammember.title}}</h4>
-                    
+
                     <p v-if="!teammember.extended" v-html="teammember.bio_short"></p>
                     <p v-else v-html="teammember.bio"></p>
 
                     <a v-if="teammember.more_infos==false && !teammember.extended" @click="showDesc(teammember)" class="b-button m-naked" target="_blank">More <i class="material-icons">keyboard_arrow_down</i></a>
                     <a v-if="teammember.more_infos==false && teammember.extended" @click="showExc(teammember)" class="b-button m-naked" target="_blank">Less<i class="material-icons">keyboard_arrow_up</i></a>
                     <a v-if="teammember.more_infos==true" @click="teamMore(teammember.slug)" class="b-button m-naked" target="_blank">More<i class="material-icons">keyboard_arrow_down</i></a>
+                    <a v-if="teammember.projects!='' && !teammember.extended_project" @click="showProj(teammember)" class="b-button m-naked" target="_blank">Projects<i class="material-icons">keyboard_arrow_down</i></a>
+                    <a v-if="teammember.projects!='' && teammember.extended_project" @click="hideProj(teammember)" class="b-button m-naked" target="_blank">Projects<i class="material-icons">keyboard_arrow_up</i></a>
+
+                    <div v-if="teammember.extended_project">
+                      <div class="project_list" v-for="project in teammember.projects">
+                          <a :href="project.projects_id.link">{{project.projects_id.name}}</a>
+                      </div>
+                    </div>
+
 
                 </div>
             </div>
