--- a/team.html
+++ b/team.html
@@ -2,15 +2,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>The GovLab | Team</title>
-    <meta content="The GovLab | Team" property="og:title">
-    <meta content="Deepening our understanding of how to govern
-    more effectively and legitimately through technology." property="og:description">
-
     <meta property="og:type" content="website">
     <meta property="og:image" content="http://www.thegovlab.org/static/img/govlab-og.png">
     <meta content="The GovLab" property="og:site_name">
-    <script async="" src="//www.google-analytics.com/analytics.js"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script src="//use.typekit.net/zez3buj.js"></script>
+    <script async="" src="//www.google-analytics.com/analytics.js"></script>
+    <script src="//use.typekit.net/zez3buj.js"></script>
     <style type="text/css">.tk-proxima-nova{font-family:"proxima-nova",sans-serif;}</style><style type="text/css">@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/6a07dc/00000000000000003b9b0385/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n1&v=3) format("woff2"),url(https://use.typekit.net/af/6a07dc/00000000000000003b9b0385/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n1&v=3) format("woff"),url(https://use.typekit.net/af/6a07dc/00000000000000003b9b0385/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n1&v=3) format("opentype");font-weight:100;font-style:normal;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/bb2067/00000000000000003b9b0384/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i1&v=3) format("woff2"),url(https://use.typekit.net/af/bb2067/00000000000000003b9b0384/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i1&v=3) format("woff"),url(https://use.typekit.net/af/bb2067/00000000000000003b9b0384/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i1&v=3) format("opentype");font-weight:100;font-style:italic;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/8e11d4/00000000000000003b9b038c/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3) format("woff2"),url(https://use.typekit.net/af/8e11d4/00000000000000003b9b038c/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3) format("woff"),url(https://use.typekit.net/af/8e11d4/00000000000000003b9b038c/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3) format("opentype");font-weight:600;font-style:normal;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/553b72/00000000000000003b9b038d/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i6&v=3) format("woff2"),url(https://use.typekit.net/af/553b72/00000000000000003b9b038d/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i6&v=3) format("woff"),url(https://use.typekit.net/af/553b72/00000000000000003b9b038d/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i6&v=3) format("opentype");font-weight:600;font-style:italic;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/219c30/00000000000000003b9b0389/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3) format("woff2"),url(https://use.typekit.net/af/219c30/00000000000000003b9b0389/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3) format("woff"),url(https://use.typekit.net/af/219c30/00000000000000003b9b0389/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3) format("opentype");font-weight:400;font-style:normal;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/0de7d4/00000000000000003b9b0388/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3) format("woff2"),url(https://use.typekit.net/af/0de7d4/00000000000000003b9b0388/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3) format("woff"),url(https://use.typekit.net/af/0de7d4/00000000000000003b9b0388/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3) format("opentype");font-weight:400;font-style:italic;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/ed2fe5/00000000000000003b9b0387/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3) format("woff2"),url(https://use.typekit.net/af/ed2fe5/00000000000000003b9b0387/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3) format("woff"),url(https://use.typekit.net/af/ed2fe5/00000000000000003b9b0387/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3) format("opentype");font-weight:300;font-style:normal;}</style><script>try{Typekit.load();}catch(e){}</script>
     <link href="static/img/favicon-transparent.png" rel="shortcut icon">
 
@@ -71,7 +67,7 @@
       </script>
       <script type="text/javascript" async="" src="https://lighthouse.helpdocs.io/load?t=1588860609687"></script>
       <script type="text/javascript" async="" src="https://lighthouse.helpdocs.io/load?t=1588860571590"></script>
-      <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/axios/0.8.1/axios.min.js'></script> -->
+      
       <script src="https://unpkg.com/@directus/sdk-js@5.3.4/dist/directus-sdk.umd.min.js"></script>
 
 
@@ -123,7 +119,7 @@
 <div class="b-team" id="teamlist">
     <div class="e-team-list">
         <h1>Team</h1>
-        <div class="e-team-member" v-for="teammember in teamData" :id="teammember.slug">
+        <div class="e-team-member" v-for="teammember in teamData" :id="teammember.slug" v-if="teammember.status =='published'">
             <div class="e-wrap">
 
                               <div v-if="teammember.picture != null" class="e-team-picture" :style="{ backgroundImage: 'url(' + teammember.picture.data.thumbnails[3].url+ ')' }"></div>
@@ -131,12 +127,14 @@
                 <div class="e-info">
 
                 </div>
+
                 <div class="e-bio">
                     <h3>{{teammember.name}}</h3>
                     <h4>{{teammember.title}}</h4>
 
                     <p v-if="!teammember.extended" v-html="teammember.bio_short"></p>
-                    <p v-else v-html="teammember.bio"></p>
+                    <p v-if="teammember.bio && teammember.extended" v-html="teammember.bio"></p>
+                    <p v-if="!teammember.bio && teammember.extended" v-html="teammember.bio_short"></p>
 
                     <a v-if="teammember.more_infos==false && !teammember.extended" @click="showDesc(teammember)" class="b-button m-naked" target="_blank">More <i class="material-icons">keyboard_arrow_down</i></a>
                     <a v-if="teammember.more_infos==false && teammember.extended" @click="showExc(teammember)" class="b-button m-naked" target="_blank">Less<i class="material-icons">keyboard_arrow_up</i></a>
@@ -195,6 +193,7 @@
     </div>
     <div id="overlay"></div>
     <script src='https://unpkg.com/vue@2.0.3/dist/vue.js'></script>
+    <script src="https://unpkg.com/vue-meta/dist/vue-meta.min.js"></script>
     <script src="js/team.js"></script>
     <div id="lighthouse"><iframe id="Launcher" title="Lighthouse Help Widget Launcher Button" style="border-style: none; position: fixed; right: 20px; bottom: 20px; height: 70px; width: 70px; overflow: hidden; z-index: 2147483647;"></iframe></div>
     <script src="https://cdn.helpdocs.io/apps/lighthouse/static/js/main.039c92b6.js"></script>
