--- a/team.html
+++ b/team.html
@@ -1,204 +1,94 @@
-<html lang="en" class="wf-proximanova-n6-active wf-proximanova-n4-active wf-proximanova-n1-active wf-proximanova-i1-active wf-proximanova-i6-active wf-proximanova-i4-active wf-proximanova-n3-active wf-active"><head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+////////////////////////////////////////
+// reload page after Forward and back
+///////////////////////////////////////
 
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="http://www.thegovlab.org/static/img/govlab-og.png">
-    <meta content="The GovLab" property="og:site_name">
-    <script async="" src="//www.google-analytics.com/analytics.js"></script>
-    <script src="//use.typekit.net/zez3buj.js"></script>
-    <style type="text/css">.tk-proxima-nova{font-family:"proxima-nova",sans-serif;}</style><style type="text/css">@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/6a07dc/00000000000000003b9b0385/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n1&v=3) format("woff2"),url(https://use.typekit.net/af/6a07dc/00000000000000003b9b0385/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n1&v=3) format("woff"),url(https://use.typekit.net/af/6a07dc/00000000000000003b9b0385/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n1&v=3) format("opentype");font-weight:100;font-style:normal;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/bb2067/00000000000000003b9b0384/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i1&v=3) format("woff2"),url(https://use.typekit.net/af/bb2067/00000000000000003b9b0384/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i1&v=3) format("woff"),url(https://use.typekit.net/af/bb2067/00000000000000003b9b0384/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i1&v=3) format("opentype");font-weight:100;font-style:italic;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/8e11d4/00000000000000003b9b038c/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3) format("woff2"),url(https://use.typekit.net/af/8e11d4/00000000000000003b9b038c/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3) format("woff"),url(https://use.typekit.net/af/8e11d4/00000000000000003b9b038c/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3) format("opentype");font-weight:600;font-style:normal;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/553b72/00000000000000003b9b038d/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i6&v=3) format("woff2"),url(https://use.typekit.net/af/553b72/00000000000000003b9b038d/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i6&v=3) format("woff"),url(https://use.typekit.net/af/553b72/00000000000000003b9b038d/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i6&v=3) format("opentype");font-weight:600;font-style:italic;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/219c30/00000000000000003b9b0389/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3) format("woff2"),url(https://use.typekit.net/af/219c30/00000000000000003b9b0389/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3) format("woff"),url(https://use.typekit.net/af/219c30/00000000000000003b9b0389/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3) format("opentype");font-weight:400;font-style:normal;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/0de7d4/00000000000000003b9b0388/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3) format("woff2"),url(https://use.typekit.net/af/0de7d4/00000000000000003b9b0388/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3) format("woff"),url(https://use.typekit.net/af/0de7d4/00000000000000003b9b0388/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3) format("opentype");font-weight:400;font-style:italic;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/ed2fe5/00000000000000003b9b0387/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3) format("woff2"),url(https://use.typekit.net/af/ed2fe5/00000000000000003b9b0387/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3) format("woff"),url(https://use.typekit.net/af/ed2fe5/00000000000000003b9b0387/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3) format("opentype");font-weight:300;font-style:normal;}</style><script>try{Typekit.load();}catch(e){}</script>
-    <link href="static/img/favicon-transparent.png" rel="shortcut icon">
+const TYPE_BACK_FORWARD = 2;
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="css/styles.css">
+function isReloadedPage() {
+  return performance.navigation.type === TYPE_BACK_FORWARD;
+}
 
-    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+function main() {
+  if (isReloadedPage()) {
+    window.location.reload();
+  }
+}
+main();
 
-      ga('create', 'UA-XXXXXXX-X', 'auto');
-      ga('send', 'pageview');
-    </script>
-<script type="text/javascript">
-    //this code loads the lighthouse widget. Additional config parameters to edit available on https://support.helpdocs.io/article/ykv7l5jthy-lighthouse-widget-api
-        window.hdlh = {
-          widget_key: "8bi8g1ygumkphadqnumx",
-          primary_color: '#C1D37F',
-          logo: 'https://newjersey.github.io/cv/img/fas_logo.png',
-          brand: '',
-          color_mode: 'dark',
-          disable_authorship: true,
-          launcher_button_image: 'https://newjersey.github.io/cv/img/question_12.svg',
-          i18n: { // change the value of the strings we use inside Lighthouse, for internationalization
-      contact_button: 'Ask a scientist your question',
-      contact_name_placeholder: 'Name (Optional)',
-      contact_email_placeholder: 'Email (Required)',
-      search_placeholder: 'Ask your questions here...',
-      contact_message_placeholder: 'Type your question or message for us here...',
-          }
-        };
-        (function(h,d){var s=d.createElement("script");s.type='text/javascript';s.async=true;s.src=h+"?t="+new Date().getTime();d.head.appendChild(s);})("https://lighthouse.helpdocs.io/load",document);
-    document.addEventListener('readystatechange', function() {
-        if (document.readyState === "complete") {
-        ready_alert();
+////////////////////////////////////////////////////////////
+///// TEAM  API REQUEST ` `
+////////////////////////////////////////////////////////////
+
+
+Vue.use(VueMeta);
+new Vue({
+
+  el: '#teamlist',
+
+  data () {
+    return {
+      teamData: [],
+      more_body: false,
+      meta_title: 'The GovLab | Team',
+      meta_content: 'Deepening our understanding of how to govern more effectively and legitimately through technology.',
+      apiURL: 'https://directus.thegovlab.com/thegovlab/items/team?sort=order&fields=*,picture.*'
     }
-    });
-    //The following code is to show the text box descring the widget.
-    function ready_alert(){
-        //delay text box to compensate for widget loading time
-        setTimeout(function() {
-        document.getElementById("covid-19").style.display="block";
-      }, 1000);
-      //hide text box on mouseover
-        var test = document.getElementById("covid-19");
-          test.addEventListener("mouseover", myFunction);
-          function myFunction(){document.getElementById("covid-19").style.display="none";};
-          //hide textbox after 12seconds
-    setTimeout(function() {
-    document.getElementById("covid-19").style.display="none";
-    }, 12000);
+  },
+  metaInfo () {
+        return {
+          title: this.meta_title,
+          meta: [
+            {title: this.meta_title, property:'og:title'},
+      {  name: 'description', content: this.meta_content, property:'og:description'}
+    ]
+    }
+  },
+  created: function created() {
+    this.fetchTeam();
+  },
+  methods: {
 
+    fetchTeam() {
 
-    };
-      </script>
-      <script type="text/javascript" async="" src="https://lighthouse.helpdocs.io/load?t=1588860609687"></script>
-      <script type="text/javascript" async="" src="https://lighthouse.helpdocs.io/load?t=1588860571590"></script>
-      
-      <script src="https://unpkg.com/@directus/sdk-js@5.3.4/dist/directus-sdk.umd.min.js"></script>
+      self = this;
+      const client = new DirectusSDK({
+        url: "https://directus.thegovlab.com/",
+        project: "thegovlab",
+        storage: window.localStorage
+      });
 
+      client.getItems(
+  'team',
+  {
+    sort: 'name',
+    fields: ['*.*','picture.*','projects.projects_id.*']
+  }
+).then(data => {
+  console.log(data);
+  data.data.sort(function(x,y){
+    if (x.slug == 'stefaan-verhulst'){ return -1 } else if (y == 'beth-simone-noveck'){return 1} else {return 0}; });
+    data.data.sort(function(x,y){
+      if (x.slug == 'beth-simone-noveck'){ return -1 } else if (y == 'beth-simone-noveck'){return 1} else {return 0}; });
 
-</head>
-<body id="team" data-feedly-mini="yes">
+  self.teamData = data.data;
 
-    <!-- Class for google material icons ".material-icons" -->
-    <header class="b-top-nav ">
-        <div class="e-nav-group">
-            <div class="e-nav-item js-nav-trigger e-nav-trigger">
-                <i class="material-icons">menu</i>
-            </div>
-            <form class="e-search m-active" action="">
-                <div class="e-nav-item js-search-trigger e-search-trigger">
-                    <i class="material-icons">search</i>
-                </div>
-                <input class="js-search-value" type="text">
-                <input class="js-search-submit" type="submit" value="Search">
-            </form>
-        </div>
-
-        <div class="e-logo">
-            <a href="./"><img src="static/img/govlab-logo-white.png" alt=""></a>
-        </div>
-
-        <div class="e-social-media e-nav-group">
-            <a href="https://twitter.com/TheGovLab" class="e-nav-item" target="_blank"><i class="e-social-media-item fa fa-twitter"></i></a>
-            <!-- <a href="#" class="e-nav-item" target="_blank"><i class="e-social-media-item fa fa-facebook"></i></a> -->
-            <a href="https://www.youtube.com/user/TheGovLab" class="e-nav-item" target="_blank"><i class="e-social-media-item fa fa-youtube-play"></i></a>
-        </div>
-    </header>
-
-    <!-- Main Menu (Off Canvas) -->
-    <nav class="b-main-menu">
-        <a href="./">Home</a>
-        <a href="./about.html">About</a>
-        <a href="./projects.html">Projects</a>
-        <a href="http://thegovlab.org/events/" target="_blank">Events</a>
-        <!-- <a href="./events.html">Events</a> -->
-        <a href="./publications.html">Publications</a>
-        <a href="./team.html">Team</a>
-        <a href="./global-advisory-council.html">Global Advisory Council</a>
-        <a href="./our-transparency.html">Our Transparency</a>
-        <a href="./job-board.html">Job Board</a>
-        <a href="./contact.html">Contact</a>
-    </nav>
-
-
-<div class="b-team" id="teamlist">
-    <div class="e-team-list">
-        <h1>Team</h1>
-        <div class="e-team-member" v-for="teammember in teamData" :id="teammember.slug" v-if="teammember.status =='published'">
-            <div class="e-wrap">
-
-                              <div v-if="teammember.picture != null" class="e-team-picture" :style="{ backgroundImage: 'url(' + teammember.picture.data.thumbnails[3].url+ ')' }"></div>
-
-                <div class="e-info">
-
-                </div>
-
-                <div class="e-bio">
-                    <h3>{{teammember.name}}</h3>
-                    <h4>{{teammember.title}}</h4>
-
-                    <p v-if="!teammember.extended" v-html="teammember.bio_short"></p>
-                    <p v-if="teammember.bio && teammember.extended" v-html="teammember.bio"></p>
-                    <p v-if="!teammember.bio && teammember.extended" v-html="teammember.bio_short"></p>
-
-                    <a v-if="teammember.more_infos==false && !teammember.extended" @click="showDesc(teammember)" class="b-button m-naked" target="_blank">More <i class="material-icons">keyboard_arrow_down</i></a>
-                    <a v-if="teammember.more_infos==false && teammember.extended" @click="showExc(teammember)" class="b-button m-naked" target="_blank">Less<i class="material-icons">keyboard_arrow_up</i></a>
-                    <a v-if="teammember.more_infos==true" @click="teamMore(teammember.slug)" class="b-button m-naked" target="_blank">More<i class="material-icons">keyboard_arrow_down</i></a>
-                    <a v-if="teammember.projects!='' && !teammember.extended_project" @click="showProj(teammember)" class="b-button m-naked" target="_blank">Projects<i class="material-icons">keyboard_arrow_down</i></a>
-                    <a v-if="teammember.projects!='' && teammember.extended_project" @click="hideProj(teammember)" class="b-button m-naked" target="_blank">Projects<i class="material-icons">keyboard_arrow_up</i></a>
-
-                    <div v-if="teammember.extended_project">
-                      <div class="project_list" v-for="project in teammember.projects">
-                          <a :href="project.projects_id.link">{{project.projects_id.name}}</a>
-                      </div>
-                    </div>
-
-
-                </div>
-            </div>
-        </div>
-
-        </div>
-</div>
-
-    <footer class="b-footer">
-        <div class="e-wrap">
-            <div class="e-content m-sections">
-                <h4>Sections</h4>
-                <a href="./">Home</a>
-                <a href="./about.html">About</a>
-                <a href="./projects.html">Projects</a>
-                <!-- <a href="./events.html">Events</a> -->
-                <a href="http://thegovlab.org/events/" target="_blank">Events</a>
-                <a href="./publications.html">Publications</a>
-                <a href="./team.html">Team</a>
-                <a href="./global-advisory-council.html">Advisory Council</a>
-                <a href="./our-transparency.html">Our Transparency</a>
-                <a href="./job-board.html">Job Board</a>
-                <a href="./contact.html">Contact</a>
-                <a href="./brand.html">Brand Assets</a>
-            </div>
-            <div class="e-content">
-                <h4>Lead Supporters</h4>
-                <a class="e-partner-logo" href="https://www.macfound.org/" target="_blank"><img src="static/img/partners/macarthur-logo-white.png" alt="MacArthur Foundation"></a>
-                <a class="e-partner-logo m-omidyar" href="https://www.omidyar.com/" tagret="_blank"><img src="static/img/partners/omidyar-logo-white.svg" alt="Omidyar Network"></a>
-            </div>
-            <div class="e-content">
-                <h4>Based at</h4>
-                <a class="e-partner-logo" href="http://engineering.nyu.edu/tandon" target="_blank"><img src="static/img/partners/nyu.png" alt="NYU Tandon School of Engineering - New York University"></a>
-                <!--<a class="e-partner-logo m-mit" href="https://www.media.mit.edu/" target="_blank"><img src="static/img/partners/mit-logo-white.png" alt="MIT Media Lab"></a> -->
-            </div>
-        </div>
-    </footer>
-    <div class="b-copyright">
-        <div class="e-wrap">
-            <a class="e-cc-badge" rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png"></a>
-            This work is licensed under a <a rel="license" href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a><br><br>
-        </div>
-    </div>
-    <div id="overlay"></div>
-    <script src='https://unpkg.com/vue@2.0.3/dist/vue.js'></script>
-    <script src="https://unpkg.com/vue-meta/dist/vue-meta.min.js"></script>
-    <script src="js/team.js"></script>
-    <div id="lighthouse"><iframe id="Launcher" title="Lighthouse Help Widget Launcher Button" style="border-style: none; position: fixed; right: 20px; bottom: 20px; height: 70px; width: 70px; overflow: hidden; z-index: 2147483647;"></iframe></div>
-    <script src="https://cdn.helpdocs.io/apps/lighthouse/static/js/main.039c92b6.js"></script>
-    <div id="feedly-mini" title="feedly Mini tookit"></div>
-    <div id="lighthouse"></div>
-    <script src="https://cdn.helpdocs.io/apps/lighthouse/static/js/main.039c92b6.js"></script>
-</body>
-</html>
+})
+.catch(error => console.error(error));
+    },
+    showDesc(teammember) {
+      teammember['extended'] = true;
+    },
+    showExc(teammember) {
+      teammember['extended'] = false;
+    },
+    showProj(teammember) {
+      teammember['extended_project'] = true;
+    },
+    hideProj(teammember) {
+      teammember['extended_project'] = false;
+    },
+    teamMore(slug) {
+      window.location.href= slug+'.html';
+    }
+  }
+});
