--- a/team.html
+++ b/team.html
@@ -20,7 +20,7 @@ main();
 ////////////////////////////////////////////////////////////
 
 
-Vue.use(VueMeta);
+// Vue.use(VueMeta);
 new Vue({
 
   el: '#teamlist',
