--- a/projects.html
+++ b/projects.html
@@ -2,7 +2,7 @@
 <html lang="en" class="wf-proximanova-n1-active wf-proximanova-n6-active wf-proximanova-n4-active wf-proximanova-i4-active wf-proximanova-i1-active wf-proximanova-i6-active wf-proximanova-n3-active wf-active"><head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"><title>The GovLab | Publications</title>
-    <meta content="The GovLab | Publications" property="og:title">    <meta property="og:type" content="website">
+    <meta content="The GovLab | Projects" property="og:title">    <meta property="og:type" content="website">
     <meta property="og:image" content="http://www.thegovlab.org/static/img/govlab-og.png">
     <meta content="The GovLab" property="og:site_name">    <!-- Typekit -->
     <script async="" src="//www.google-analytics.com/analytics.js"></script><script src="//use.typekit.net/zez3buj.js"></script>
