--- a/projects.html
+++ b/projects.html
@@ -54,7 +54,7 @@
         <a href="./job-board.html">Job Board</a>
         <a href="./contact.html">Contact</a>
     </nav>
-<div id='projectlist'>
+<div id='projectlist' v-cloak>
 
 
 <section class="b-projects-landing b-top-section" >
