--- a/project.html
+++ b/project.html
@@ -14,17 +14,13 @@
     <script async="" src="./project_files/analytics.js"></script><script src="./project_files/zez3buj.js"></script>
     <style type="text/css">.tk-proxima-nova{font-family:"proxima-nova",sans-serif;}</style><style type="text/css">@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/6a07dc/00000000000000003b9b0385/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n1&v=3) format("woff2"),url(https://use.typekit.net/af/6a07dc/00000000000000003b9b0385/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n1&v=3) format("woff"),url(https://use.typekit.net/af/6a07dc/00000000000000003b9b0385/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n1&v=3) format("opentype");font-weight:100;font-style:normal;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/bb2067/00000000000000003b9b0384/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i1&v=3) format("woff2"),url(https://use.typekit.net/af/bb2067/00000000000000003b9b0384/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i1&v=3) format("woff"),url(https://use.typekit.net/af/bb2067/00000000000000003b9b0384/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i1&v=3) format("opentype");font-weight:100;font-style:italic;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/8e11d4/00000000000000003b9b038c/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3) format("woff2"),url(https://use.typekit.net/af/8e11d4/00000000000000003b9b038c/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3) format("woff"),url(https://use.typekit.net/af/8e11d4/00000000000000003b9b038c/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n6&v=3) format("opentype");font-weight:600;font-style:normal;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/553b72/00000000000000003b9b038d/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i6&v=3) format("woff2"),url(https://use.typekit.net/af/553b72/00000000000000003b9b038d/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i6&v=3) format("woff"),url(https://use.typekit.net/af/553b72/00000000000000003b9b038d/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i6&v=3) format("opentype");font-weight:600;font-style:italic;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/219c30/00000000000000003b9b0389/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3) format("woff2"),url(https://use.typekit.net/af/219c30/00000000000000003b9b0389/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3) format("woff"),url(https://use.typekit.net/af/219c30/00000000000000003b9b0389/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n4&v=3) format("opentype");font-weight:400;font-style:normal;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/0de7d4/00000000000000003b9b0388/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3) format("woff2"),url(https://use.typekit.net/af/0de7d4/00000000000000003b9b0388/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3) format("woff"),url(https://use.typekit.net/af/0de7d4/00000000000000003b9b0388/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=i4&v=3) format("opentype");font-weight:400;font-style:italic;}@font-face{font-family:proxima-nova;src:url(https://use.typekit.net/af/ed2fe5/00000000000000003b9b0387/27/l?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3) format("woff2"),url(https://use.typekit.net/af/ed2fe5/00000000000000003b9b0387/27/d?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3) format("woff"),url(https://use.typekit.net/af/ed2fe5/00000000000000003b9b0387/27/a?primer=7cdcb44be4a7db8877ffa5c0007b8dd865b3bbc383831fe2ea177f62257a9191&fvd=n3&v=3) format("opentype");font-weight:300;font-style:normal;}</style><script>try{Typekit.load();}catch(e){}</script>
     <link href="http://www.thegovlab.org/static/img/favicon-transparent.png" rel="shortcut icon">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <!-- Base CSS links -->
-    <link rel="stylesheet" href="http://www.thegovlab.org/static/styles/govlab-styleguide.css">
-    <link rel="stylesheet" href="css/styles.css">    <script>
 
     <link href="./project_files/icon" rel="stylesheet">
     <link rel="stylesheet" href="./project_files/font-awesome.min.css">
 
-    <link rel="stylesheet" href="./project_files/normalize.css">
-    <link rel="stylesheet" href="./project_files/slick.css">
-    <link rel="stylesheet" href="./project_files/styles.css">
+    <link rel="stylesheet" href="http://www.thegovlab.org/project_files/normalize.css">
+    <link rel="stylesheet" href="http://www.thegovlab.org/project_files/slick.css">
+    <link rel="stylesheet" href="http://www.thegovlab.org/project_files/styles.css">
 
     <script src="./project_files/jquery-1.11.1.min.js"></script>
     <script>
@@ -33,7 +29,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-XXXXXX-', 'auto');
+      ga('create', 'UA-40012093-4', 'auto');
       ga('send', 'pageview');
     </script>
 <script type="text/javascript">
@@ -302,10 +298,11 @@
         </div>
     </div>
     <div id="overlay"></div>
-
+    <script src="http://www.thegovlab.org/static/vendor/slick.min.js"></script>
     <script src='https://unpkg.com/vue@2.0.3/dist/vue.js'></script>
     <script src="https://unpkg.com/vue-meta/dist/vue-meta.min.js"></script>
     <script src="js/project.js"></script>
+
     <script src="https://cdn.helpdocs.io/apps/lighthouse/static/js/main.c5ea7867.js"></script>
 
 <div id="feedly-mini" title="feedly Mini tookit"></div><div id="lighthouse"><iframe id="Launcher" title="Lighthouse Help Widget Launcher Button" style="border-style: none; position: fixed; right: 20px; bottom: 20px; height: 70px; width: 70px; overflow: hidden; z-index: 2147483647;" src="./project_files/saved_resource.html"></iframe></div><script src="./project_files/main.c5ea7867.js"></script></body></html>
