--- a/project.html
+++ b/project.html
@@ -18,9 +18,9 @@
     <link href="./project_files/icon" rel="stylesheet">
     <link rel="stylesheet" href="./project_files/font-awesome.min.css">
 
-    <link rel="stylesheet" href="http://www.thegovlab.org/project_files/normalize.css">
-    <link rel="stylesheet" href="http://www.thegovlab.org/project_files/slick.css">
-    <link rel="stylesheet" href="http://www.thegovlab.org/project_files/styles.css">
+    <link rel="stylesheet" href="./project_files/normalize.css">
+    <link rel="stylesheet" href="./project_files/slick.css">
+    <link rel="stylesheet" href="./project_files/styles.css">
 
     <script src="./project_files/jquery-1.11.1.min.js"></script>
     <script>
@@ -298,11 +298,10 @@
         </div>
     </div>
     <div id="overlay"></div>
-    <script src="http://www.thegovlab.org/static/vendor/slick.min.js"></script>
+
     <script src='https://unpkg.com/vue@2.0.3/dist/vue.js'></script>
     <script src="https://unpkg.com/vue-meta/dist/vue-meta.min.js"></script>
     <script src="js/project.js"></script>
-
     <script src="https://cdn.helpdocs.io/apps/lighthouse/static/js/main.c5ea7867.js"></script>
 
 <div id="feedly-mini" title="feedly Mini tookit"></div><div id="lighthouse"><iframe id="Launcher" title="Lighthouse Help Widget Launcher Button" style="border-style: none; position: fixed; right: 20px; bottom: 20px; height: 70px; width: 70px; overflow: hidden; z-index: 2147483647;" src="./project_files/saved_resource.html"></iframe></div><script src="./project_files/main.c5ea7867.js"></script></body></html>
