--- a/project.html
+++ b/project.html
@@ -20,10 +20,11 @@
     <link rel="stylesheet" href="./project_files/font-awesome.min.css">
 
     <link rel="stylesheet" href="./project_files/normalize.css">
-    <link rel="stylesheet" href="./project_files/slick.css">
+<link rel="stylesheet" href="http://www.thegovlab.org/static/vendor/slick.css">
+    <script src='http://www.thegovlab.org/static/vendor/slick.min.js'></script>
     <link rel="stylesheet" href="./project_files/styles.css">
 
-    <script src="./project_files/jquery-1.11.1.min.js"></script>
+<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
